--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "is-tree"
 version = "0.1.0"
 edition = "2021"
+description = "Everything is a tree"
+license = "Apache-2.0"
+documentation = "https://docs.rs/is-tree"
+homepage = "https://github.com/sensorial-systems/is-tree"
+repository = "https://github.com/sensorial-systems/is-tree"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
