--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
+workspace = { members = ["is-tree-macro"] }
 [package]
 name = "is-tree"
 version = "0.1.0"
@@ -12,3 +13,4 @@ repository = "https://github.com/sensorial-systems/is-tree"
 
 [dependencies]
 enum-as-inner = "0.6.0"
+is-tree-macro = { path = "is-tree-macro" }
