--- a/is-tree-macro/Cargo.toml
+++ b/is-tree-macro/Cargo.toml
@@ -2,6 +2,11 @@
 name = "is-tree-macro"
 version = "0.1.0"
 edition = "2021"
+description = "is-tree macro library"
+license = "Apache-2.0"
+documentation = "https://docs.rs/is-tree"
+homepage = "https://github.com/sensorial-systems/is-tree"
+repository = "https://github.com/sensorial-systems/is-tree"
 
 [lib]
 proc-macro = true
