--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,3 @@
-workspace = { members = ["is-tree-macro"] }
 [package]
 name = "is-tree"
 version = "0.2.0"
@@ -12,3 +11,6 @@ repository = "https://github.com/sensorial-systems/is-tree"
 [dependencies]
 enum-as-inner = "0.6.0"
 is-tree-macro = "0.1.0"
+
+[patch.crates-io]
+is-tree-macro = { path = "is-tree-macro" }
