--- a/is-tree-macro/Cargo.toml
+++ b/is-tree-macro/Cargo.toml
@@ -7,6 +7,7 @@ license.workspace = true
 documentation.workspace = true
 homepage.workspace = true
 repository.workspace = true
+readme.workspace = true
 
 [lib]
 proc-macro = true
