--- a/is-tree/Cargo.toml
+++ b/is-tree/Cargo.toml
@@ -7,7 +7,8 @@ license.workspace = true
 documentation.workspace = true
 homepage.workspace = true
 repository.workspace = true
+readme.workspace = true
 
 [dependencies]
 enum-as-inner = "0.6.0"
-is-tree-macro = "0.9.0"
+is-tree-macro = "0.9.1"
